refactor(ServerData): replace deprecated URL constructor